@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="name.nick.jubanka.atari800"
+	package="name.nick.jubanka.colleen"
 	android:installLocation="auto"
 	android:versionCode="20"
 	android:versionName="1.3">
